fixes for proper browser packaging

--- a/package.json
+++ b/package.json
@@ -35,5 +35,7 @@
     },
     "scripts": {
         "install": "node-pre-gyp install --fallback-to-build"
-    }
+    },
+    "browser": "./browser_main.js"
+
 }
