--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "dependencies": {
         "node-pre-gyp": "0.5.x",
         "wrench": "*",
-        "moment": "~2.2.1",
-        "png": "^3.0.3"
+        "moment": "~2.2.1"
     },
     "bundledDependencies":["node-pre-gyp"],
     "devDependencies": {
