--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aminogfx",
-  "version": "0.0.12",
+  "version": "0.0.13",
   "description": "Scenegraph lib for OpenGL ES 2.0 and HTML Canvas",
   "author": {
     "name": "Josh Marinacci",
@@ -21,7 +21,7 @@
     "inputevents": "0.0.1",
     "moment": "~2.2.1",
     "node-pre-gyp": "0.5.x",
-    "pureimage": "0.0.5",
+    "pureimage": "^0.0.6",
     "richtext": "^0.0.3",
     "wrench": "*"
   },
