--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "inputevents": "0.0.2",
     "moment": "~2.2.1",
     "node-pre-gyp": "0.5.x",
-    "ometa-js": "^1.3.2",
+    "ometa-js": "~1.3.2",
     "pureimage": "^0.0.10",
     "richtext": "^0.0.3",
     "wrench": "*"
